--- a/css/home.css
+++ b/css/home.css
@@ -1,140 +1,16 @@
-/*モバイル(iPhone,Androidに関するCSSを記述する*/
-html {
-    font-size: 62.5%;
+html{font-size:62.5%;}
+body{box-sizing:border-box;font-family:'Nunito','Noto Sans', sans-serif;font-weight:400;background:#F9F9F9;}
+.main_parent{text-align:center;}
+.main:after{content:".";display:block;height:0;font-size:0;visibility:hidden;}
+.button{position:relative;display:block;width:64px;height:64px;border-radius:100px;background:#272727;margin:0 auto;margin-top:32px;margin-bottom:64px;}
+.button i{color:#ffffff;position:absolute;top:16px;left:20px;font-size:2.4rem;animation-iteration-count:infinite;animation-duration:3s;-webkit-animation-duration:3s;}
+.button .ring{background:rgba(39, 39, 39, 0.2);position:absolute;z-index:-1;border-radius:100px;height:64px;width:64px;top:0px;left:0px;}
+.button .ring{animation:pulsate 1.5s ease-out;animation-iteration-count:infinite;}
+@keyframes pulsate{0%{transform:scale(1, 1);}
+50%{opacity:1;}
+100%{transform:scale(2, 2);opacity:0.0;}
 }
-body{
-    box-sizing: border-box;
-    font-family: 'Nunito','Noto Sans', sans-serif;
-    font-weight: 400;
-    background: #F9F9F9;
-}
-/*home*/
-.main_parent{
-    text-align: center;
-}
-/*main*/
-.main:after{
-    content: ".";
-    display: block;
-    height: 0;
-    font-size:0;
-    visibility:hidden;
-}
-/*toppage-btn*/
-/*
-.pageTop-btn {
-    width: 64px;
-    margin: 0 auto;
-    margin-bottom: 32px;
-}
-.pageTop-btn a {
-    display: block;
-    z-index: 999;
-    border-radius: 100%;
-    width: 64px;
-    height: 64px;
-    line-height: 64px;
-    background-color: #272727;
-    color: #fff;
-    font-weight: bold;
-    text-decoration: none;
-    text-align: center;
-    box-shadow: 0 2px 10px 0px rgba(0,0,0,0.26);
-}
-.pageTop-btn a:hover {
-    text-decoration: none;
-    opacity: 0.7;
-}
-.pageTop-btn i{
-    font-size: 2.4rem;
-    top: 50%;
-}
-*/
-
-.button {
-    position: relative;
-    display: block;
-    width: 64px;
-    height: 64px;
-    border-radius: 100px;
-    background: #272727;
-    margin: 0 auto;
-    margin-top: 32px;
-    margin-bottom: 64px;
-}
-.button i{
-    color: #ffffff;
-    position: absolute;
-    top: 16px;
-    left: 20px;
-    font-size: 2.4rem;
-    animation-iteration-count: infinite;
-    animation-duration: 3s;
-    -webkit-animation-duration: 3s;
-}
-.button .ring {
-    background: rgba(39, 39, 39, 0.2);
-    position: absolute;
-    z-index:-1;
-    border-radius: 100px;
-    height: 64px;
-    width: 64px;
-    top: 0px;  /*A.中心*/
-    left: 0px;  /*A.中心*/
-}
-.button .ring {
-    animation: pulsate 1.5s ease-out;  /* スピードなど */
-    animation-iteration-count: infinite;
-/*    animation-delay:5s;*/
-}
-@keyframes pulsate {
-    0%   { transform: scale(1, 1); }
-    50%  { opacity: 1; }
-    100% { transform: scale(2, 2); opacity: 0.0; }
-}
-
-
-
-@media screen and (min-width:480px) {
-    /*モバイル(iPhone,Androidを傾けたときのCSSを記述する*/
-}
-@media screen and (min-width:768px) and (max-width:1024px) {
-    /*iPadのCSSを記述する*/
-}
-@media screen and (min-width:1024px) {
-    /*PC用のCSSを記述する*/
-    /*toppage-btn*/
-    .button{
-        display: none;
-    }
-/*
-    .button {
-        width: 64px;
-        margin: 0 auto;
-        margin-bottom: 32px;
-    }
-    .button a {
-        display: block;
-        z-index: 999;
-        border-radius: 100%;
-        width: 64px;
-        height: 64px;
-        line-height: 64px;
-        background-color: #272727;
-        color: #fff;
-        font-weight: bold;
-        text-decoration: none;
-        text-align: center;
-        box-shadow: 0 2px 10px 0px rgba(0,0,0,0.26);
-        display: none;
-    }
-    .butotn a:hover {
-        text-decoration: none;
-        opacity: 0.7;
-    }
-    .button i{
-        font-size: 2.4rem;
-        top: 50%;
-    }
-*/
+@media screen and (min-width:480px){}
+@media screen and (min-width:768px) and (max-width:1024px){}
+@media screen and (min-width:1024px){.button{display:none;}
 }
