--- a/css/headerandfooter.css
+++ b/css/headerandfooter.css
@@ -470,13 +470,13 @@
     .menu_search-keywords {
         background-color: #1E1E1E;
         border: 0;
-        height: 50px; /* 高さ40px */
+        height: 40px; /* 高さ40px */
         width: 86%;
         margin-left: 5%;
         margin-right: 5%;
-        padding: 0 4%;
+        padding: 0.4%;
         color: #ffffff;
-        font-size: 17px;
+        font-size: 16px;
     }
 
 
