--- a/css/contact.css
+++ b/css/contact.css
@@ -153,6 +153,10 @@ input[type="submit"]
     border: none !important;
 }
 
+span.wpcf7-not-valid-tip{
+    margin-bottom: 30px !important;
+
+}
 
 
 
@@ -220,6 +224,14 @@ input[type="submit"]
         font-size: 1.5rem;
     }
 
+    .wpcf7-validation-errors{
+        background: #E53935;
+        border-radius: 20px;
+
+    }
+    .wpcf7-mail-sent-ok{
+        border-radius: 20px;
+    }
 
 
     input[type="submit"]
@@ -234,6 +246,12 @@ input[type="submit"]
         cursor: pointer;
         display: block;
         margin: 0 auto;
+        box-shadow: 0 10px 10px 2px rgba(0,0,0,0.12);
+        transition-duration: 0.2s;
     }
 
+    input[type="submit"]:hover
+    {
+        box-shadow: 0 20px 20px 2px rgba(0,0,0,0.12);
+    }
 }
