--- a/css/category.css
+++ b/css/category.css
@@ -31,6 +31,46 @@ header{
     text-align: left;
 }
 
+.card{
+    box-sizing: border-box;
+    position: relative;
+    height: 240px;
+    width: 343px;
+    background: #ffffff;
+    border-radius: 15px;
+    margin: 0 auto;
+    margin-bottom: 32px;
+    padding-top: 32px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+    font-family: 'Nunito','Noto Sans', sans-serif;
+    font-weight: 700;
+}
+
+
+.card__heading{
+    text-align: left;
+    margin-left: 32px;
+    font-size: 3.0rem;
+}
+
+.card__description{
+    font-family: 'Noto Sans', sans-serif;
+    text-align: left;
+    margin-top: 24px;
+    margin-left: 32px;
+    font-size: 18px;
+    line-height: 36px;
+}
+
+
+.card__image{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 162px;
+    height: 162px;
+}
+
 
 @media screen and (max-width: 979px) {
 
@@ -60,25 +100,31 @@ header{
 
 }
 
-.noHit{
-    height: 500px;
-    width: 85%;
-    display: block;
-    background: url(../img/noHit_m.png) no-repeat left top;
-    -webkit-background-size: 100%;
-    background-size: 100%;
-    margin: 30px auto 0 auto;
-}
-
 @media screen and (min-width:1024px) {
-    .noHit{
-        height: 500px;
-        width: 800px;
-        display: block;
-        background: url(../img/noHit.png) no-repeat left top;
-        -webkit-background-size: 100%;
-        background-size: 100%;
-        margin: 0 auto;
+    .card{
+        margin-top: 64px;
+        height: 248px;
+        width: 648px;
+        padding-top: 48px;
+    }
+    .card__heading{
+        margin-left: 70px;
+        font-size: 3.0rem;
+    }
+    .card__description{
+        margin-top: 24px;
+        margin-left: 70px;
+        font-size: 2.4rem;
+        line-height: 48px;
+        font-weight: bold;
+    }
+    .card__image{
+        position: absolute;
+        bottom: 0;
+        right: 70px;
+        width: 200px;
+        height: 200px;
     }
 
 }
+
